# Agents-with-crewai

./: README.md  requirements.txt
Cipher/: .gitignore  README.md  __init__.py  cipher_agent.py  example_usage.py  google_reviews.py  pyproject.toml  requirements.txt  run_crew.py
Cipher/.github/workflows/: python-ci.yml
Cipher/examples/: example_usage.py
Cipher/results/: cipher_agent_result_20250726_124443.md  test_result_20250726_124356.md
Cipher/src/cipher/: __init__.py  agents.yaml  improvement_plan.py  pros_cons.py  sentiment.py  tasks.yaml
Cipher/tests/: test_cipher_agent.py
agent123/: README.md  pyproject.toml  report.md
agent123/src/agent123/: crew.py  main.py
agent123/tests/: test_agent123.py  test_tools.py
learning_assistant/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
learning_assistant/src/: learning_plan.md  learning_resources.md  practice_exercises.md
learning_assistant/src/learning_assistant/: __init__.py  crew.py  main.py
spark/: .env.example  README.md  pyproject.toml  run_agent.py
spark/src/spark/: crew.py  main.py
spark/src/spark/config/: agents.yaml  tasks.yaml
spark/src/spark/tools/: __init__.py  tools.py
