[project]
name = "agent123"
version = "0.1.0"
description = "Agent123 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
agent123 = "agent123.main:run"
run_crew = "agent123.main:run"
train = "agent123.main:train"
replay = "agent123.main:replay"
test = "agent123.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
