[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning_assistant"
version = "0.1.0"
description = "A personalized learning assistant that helps users learn new topics through AI-powered guidance"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "crewai>=0.28.8",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
learning-assistant = "learning_assistant.main:run"

[tool.setuptools]
packages = ["learning_assistant"]
package-dir = {"" = "src"}
