[project]
name = "spark"
version = "0.1.0"
description = "Spark using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
spark = "spark.main:run"
run_crew = "spark.main:run"
train = "spark.main:train"
replay = "spark.main:replay"
test = "spark.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
